monticore-generator/src/test/resources/cocos/valid/Enum.mc4
package cocos.valid;

grammar Enum {

  enum E = "a";

}