monticore-generator/src/test/resources/cocos/invalid/A4009/A4009b.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4009;

grammar A4009b extends mc.grammars.types.TestTypes {

  enum QualifiedName = "a";

}
